--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <title>Trie</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.css">
-    <link rel="stylesheet" href="css/semantic.darkly.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="public/css/semantic.darkly.min.css">
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body class="Site">
 
@@ -76,6 +76,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.js"></script>
     <script src="https://unpkg.com/moonjs/dist/moon.js"></script>
-    <script src="js/index.js"></script>
+    <script src="public/js/index.js"></script>
 </body>
 </html>
