--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               What
               <i class="dropdown icon"></i>
             </a>
-            <a class="item button" data-position="top center" data-content="Why not? Save the Tries!">
+            <a class="item button" data-position="top center" data-content="Tries allow you to insert and find strings in O(L) time (where L represent the length of a single word). They also allow you to find words that have a single character different, a prefix in common, a character missing, etc.">
               Why
               <i class="dropdown icon"></i>
             </a>
